# log4rs-benchmark

./: .gitignore  Cargo.toml  README.md
src/: main.rs
